  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jdetle, jbarnoud

  * 0.15.0

Metadata

  * link download_url to GitHub releases so that Depsy recognizes
    contributors (issue #749)
  * a __version__ variable is now exposed; it is built by setup.py from the
    AUTHORS file (Issue #784)

API Changes

  * rmsd doesn't superimpose by default anymore. The superposition
    is controlled by the 'superposition' keyword now. (see issue #562)

Enhancements

  * Add conda build scripts (Issue #608)

Fixes
  
  * change_release now finds number and dev (Issue #776) 
  * test_shear_from_matrix doesn't fail for MKL builds anymore (Issue #757)
  * HEADER and TITLE now appear just once in the PDB. (Issue #741) (PR #761)

Changes

  * Generalized contact analysis class added. (Issue #702)

02/28/16 tyler.je.reddy, kain88-de, jbarnoud, richardjgowers, orbeckst
         manuel.nuno.melo, Balasubra, Saxenauts, mattihappy

  * 0.14.0

API Changes

  * Offsets files for Gromacs trajectory formats have been changed to a numpy
    style format '.npz'. Offsets files will be regenerated when you load a
    xtc/trr trajectory again. (Issue #441)
  * rotation_matrix now accepts array-likes as input

Enhancement

  * XDR file seeking errors now report system errno. (PR #678)
  * Offsets reading for xtc/trr files has been sped up. (Issue #441)
  * select_atoms now implicitly ORs multiple values after a keyword for
    many types of selections (Issue #345)
  * Performance improvements for the PDBReader of about 10%
  * LinearDensity analysis module added, which allows to compute linear mass