@@ -13,7 +13,8 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jdetle, jbarnoud
+??/??/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jdetle, jbarnoud,
+         dotsdl
 
   * 0.15.0
 
@@ -32,6 +33,7 @@ API Changes
 Enhancements
 
   * Add conda build scripts (Issue #608)
+  * Added read-only property giving Universe init kwargs (Issue #292)
 
 Fixes
   
